Fix spacing issue on category page

--- a/style.css
+++ b/style.css
@@ -2128,6 +2128,7 @@ zd-autocomplete-title-multibrand {
     display: flex;
     flex-direction: row;
     flex-wrap: wrap;
+    justify-content: space-around;
   }
 }
 
